# txc

./: .editorconfig  .lefthook.yaml  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yaml  release.yaml
src/: case_converter.rs  main.rs
tests/: integration.rs
