[package]
name = "txc"
description = "A simple tool for converting text between different formats."
version = "0.1.0"
edition = "2021"


[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
regex = "1.11.1"
titlecase = "3.3.0"

[dev-dependencies]
assert_cmd = "2.0.16"
rstest = "0.24.0"
