[package]
name = "txc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
regex = "1.10.4"
titlecase = "3.1.1"

[dev-dependencies]
assert_cmd = "2.0.14"
rstest = "0.19.0"
